--- a/farafmb/templates/base.html
+++ b/farafmb/templates/base.html
@@ -2,43 +2,45 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>
-            {% block title %}
+<head>
+    <meta charset="utf-8"/>
+    <title>
+        {% block title %}
             {% if page.seo_title %}{{ page.seo_title }}{% else %}{{ page.title }}{% endif %}
-            {% endblock %}
-            {% block title_suffix %}
+        {% endblock %}
+        {% block title_suffix %}
             {% wagtail_site as current_site %}
             {% if current_site and current_site.site_name %}- {{ current_site.site_name }}{% endif %}
-            {% endblock %}
-        </title>
-        <meta name="description" content="" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        {% endblock %}
+    </title>
+    <meta name="description" content=""/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-        {# Force all links in the live preview panel to be opened in a new tab #}
-        {% if request.in_preview_panel %}
+    {# Force all links in the live preview panel to be opened in a new tab #}
+    {% if request.in_preview_panel %}
         <base target="_blank">
-        {% endif %}
+    {% endif %}
 
-        {# Global stylesheets #}
-        <link rel="stylesheet" type="text/css" href="{% static 'css/farafmb.css' %}">
+    {# Global stylesheets #}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/farafmb.css' %}">
 
-        {% block extra_css %}
+    {% block extra_css %}
         {# Override this in templates to add extra stylesheets #}
-        {% endblock %}
-    </head>
+    {% endblock %}
+</head>
+<body class="{% block body_class %}{% endblock %}">
+{% wagtailuserbar %}
 
-    <body class="{% block body_class %}{% endblock %}">
-        {% wagtailuserbar %}
+{% include '_navbar.html' %}
 
-        {% block content %}{% endblock %}
+{% block content %}{% endblock %}
 
-        {# Global javascript #}
-        <script type="text/javascript" src="{% static 'js/farafmb.js' %}"></script>
+{# Global javascript #}
+<script type="text/javascript" src="{% static 'js/farafmb.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/navbar-toggle.js' %}"></script>
 
-        {% block extra_js %}
-        {# Override this in templates to add extra javascript #}
-        {% endblock %}
-    </body>
+{% block extra_js %}
+    {# Override this in templates to add extra javascript #}
+{% endblock %}
+</body>
 </html>
