--- a/farafmb/templates/_navbar.html
+++ b/farafmb/templates/_navbar.html
@@ -1,10 +1,10 @@
 {% load static %}
 
-<nav class="navbar p-5" role="navigation" aria-label="main navigation">
+<nav class="navbar is-primary" role="navigation" aria-label="main navigation">
     <div class="container">
         <div class="navbar-brand">
             <a class="navbar-item" href="https://www.farafmb.de">
-                <img src="{% static 'img/logo_56x56.png' %}" width="36" height="36">
+                <img src="{% static 'img/logo_128x128.png' %}" width="64" height="64">
             </a>
 
             <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarMain">
@@ -33,7 +33,7 @@
                         About us
                     </a>
 
-                    <div class="navbar-dropdown">
+                    <div class="navbar-dropdown is-right">
                         <a class="navbar-item">
                             Who we are
                         </a>
@@ -49,7 +49,7 @@
                         More
                     </a>
 
-                    <div class="navbar-dropdown">
+                    <div class="navbar-dropdown is-right">
                         <a class="navbar-item">
                             Contact
                         </a>
