--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -1,9 +1,23 @@
 {% extends "base.html" %}
 
-{% load wagtailcore_tags %}
+{% load wagtailcore_tags wagtailimages_tags %}
 
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
-    {{ page.body|richtext }}
+    <div class="container p-6">
+        <h1 class="title">Fachschaftsrat Maschinenbau</h1>
+
+        <h3 class="subtitle">Otto-von-Guericke-Universität Magdeburg</h3>
+
+        <div class="content">
+            {{ page.body|richtext }}
+        </div>
+
+        <div class="mx-auto" style="width: 800px;">
+            <figure class="image is-5by3">
+                {% image page.image fill-800x480 %}
+            </figure>
+        </div>
+    </div>
 {% endblock content %}
