--- a/farafmb/templates/base.html
+++ b/farafmb/templates/base.html
@@ -35,6 +35,8 @@
 
 {% block content %}{% endblock %}
 
+{% include '_footer.html' %}
+
 {# Global javascript #}
 <script type="text/javascript" src="{% static 'js/farafmb.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/navbar-toggle.js' %}"></script>
