Add spacing between navbar and content

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -5,7 +5,7 @@
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
-    <div class="container p-6">
+    <div class="container">
         <h1 class="title">Fachschaftsrat Maschinenbau</h1>
 
         <h3 class="subtitle">Otto-von-Guericke-Universität Magdeburg</h3>
