--- a/farafmb/templates/_navbar.html
+++ b/farafmb/templates/_navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<nav class="navbar is-primary" role="navigation" aria-label="main navigation">
+<nav class="navbar is-primary mb-6" role="navigation" aria-label="main navigation">
     <div class="container">
         <div class="navbar-brand">
             <a class="navbar-item" href="https://www.farafmb.de">
