--- a/blog/templates/blog/blog_index_page.html
+++ b/blog/templates/blog/blog_index_page.html
@@ -5,21 +5,49 @@
 {% block body_class %}template-blockindexpage{% endblock %}
 
 {% block content %}
-    <h1>{{ page.title }}</h1>
+    <div class="container">
+        <h1 class="title is-1">{{ page.title }}</h1>
 
-    <div class="intro">{{ page.intro|richtext }}</div>
+        <div class="content">{{ page.intro|richtext }}</div>
 
-    {% for post in blogpages %}
-        {% with post=post.specific %}
-            <h2><a href="{% pageurl post %}">{{ post.title }}</a></h2>
+        {% for post in blogpages %}
+            <div class="columns mt-6">
+                {% with post=post.specific %}
+                    <div class="column">
+                        <p>{{ post.date }}</p>
 
-            {% with post.main_image as main_image %}
-                {% if main_image %}{% image main_image fill-160x100 %}{% endif %}
-            {% endwith %}
+                        <h3 class="title">{{ post.title }}</h3>
 
-            <p>{{ post.intro }}</p>
-            {{ post.body|richtext }}
-        {% endwith %}
-    {% endfor %}
+                        {% if post.categories.all %}
+                            <h5 class="subtitle">Gepostet in: {{ post.categories.all | join:', ' }}</h5>
+                        {% endif %}
 
+                        <div class="block">
+                            <p>{{ post.intro }}</p>
+                        </div>
+
+                        {% if post.tags.all %}
+                            <div class="tags">
+                                {% for tag in post.tags.all %}
+                                    <span class="tag">{{ tag }}</span>
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+
+                        <a class="button" href="{% pageurl post %}">Weiterlesen</a>
+                    </div>
+
+                    {% with post.main_image as main_image %}
+                        {% if main_image %}
+                            <div class="column is-narrow" style="width: 480px;">
+                                <figure class="image is-3by2">
+                                    {% image main_image fill-480x320 %}
+                                </figure>
+                            </div>
+                        {% endif %}
+                    {% endwith %}
+                {% endwith %}
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
