--- a/farafmb/templates/_navbar.html
+++ b/farafmb/templates/_navbar.html
@@ -3,7 +3,7 @@
 <nav class="navbar is-primary mb-6" role="navigation" aria-label="main navigation">
     <div class="container">
         <div class="navbar-brand">
-            <a class="navbar-item" href="https://www.farafmb.de">
+            <a class="navbar-item" href="/">
                 <img src="{% static 'img/logo_128x128.png' %}" width="64" height="64">
             </a>
 
